--- a/conf/base/parameters/make_submission.yml
+++ b/conf/base/parameters/make_submission.yml
@@ -1,7 +1,5 @@
-# This is a boilerplate parameters config generated for pipeline 'data_engineering'
+# This is a boilerplate parameters config generated for pipeline 'make_submission'
 # using Kedro 0.17.6.
 #
 # Documentation for this file format can be found in "Parameters"
 # Link: https://kedro.readthedocs.io/en/0.17.6/04_kedro_project_setup/02_configuration.html#parameters
-parent_var: "SK_ID_CURR"
-previous_application_prefix: "previous"
